objects/CSS_WS_Failure_Master__c.object
<CustomObject>
    <fields>
        <fullName>CSS_WS_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>CSS_WS_Unique_Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Component_Code_Description__c</fullName>
        <label>Engine Component Code Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Component_Code__c</fullName>
        <label>Engine Component Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Family_Code__c</fullName>
        <label>Engine Family Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_System_Code_Description__c</fullName>
        <label>Engine System Code Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_System_Code__c</fullName>
        <label>Engine System Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_Code__c</fullName>
        <formula>Engine_System_Code__c &amp; Engine_Component_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fail Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Name__c</fullName>
        <formula>Engine_System_Code_Description__c &amp; &apos; &apos; &amp; Engine_Component_Code_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failure Name</label>
        <type>Text</type>
    </fields>
    <label>CSS WS Failure Master</label>
    <nameField>
        <label>CSS WS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS Failures Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>